--- a/PostitPPD/nbproject/project.properties
+++ b/PostitPPD/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=postitppd.PostitPPD
+main.class=com.postitppd.forms.guiUserLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
